...
        },
        trigger: { alignItems: "flex-start" as const, flexDirection: "row" as const, minHeight: 35 }
    }), [ context.theme.fontFamily, context.theme.fontSize, context.theme.muted ]);

    return <View>
        <Pressable
            accessibilityLabel={ expanded ? "Collapse toggle" : "Expand toggle" }
            accessibilityRole="button"
            accessibilityState={ { expanded } }
            onPress={ () => setLocalExpansion({ block, value: !expanded }) }
            style={ styles.trigger }>
            <Text style={ styles.arrow }>
                { expanded ? "▼" : "▶" }
...
